# QuasarCode

./: .gitignore  LICENSE.txt  QuasarCode.sln  README.md  pyproject.toml
QuasarCode_Library/: QuasarCode_Library.csproj  QuasarCode_Library.xml
QuasarCode_Library/Maths/: CompoundUnit.cs  ICompoundUnit.cs  IGeneralUnit.cs  IStandardValue.cs  IValue.cs  StandardValue.cs  Unit.cs  UnitPowerPair.cs  Units.cs  Value.cs
QuasarCode_Library/Symbolic/: Constant.cs  Symbol.cs
QuasarCode_Library/Tools/: Validators.cs
QuasarCode_Library_Games/: QuasarCode_Library_Games.csproj
QuasarCode_Library_Games/Cards/: ICardGroup.cs
QuasarCode_Library_Games/Dice/: Dice6.cs  DynamicDiceCup.cs  IDynamicDiceCup.cs  IStaticDiceCup.cs
QuasarCode_Library_Games/Spinners/: Spinner.cs
QuasarCode_Library_IO/: QuasarCode_Library_IO.csproj
QuasarCode_Library_IO/Text/: Console.cs  IConsole.cs  IWindowedConsole.cs
QuasarCode_Library_Maths/: CompoundUnit.cs  IUnit.cs  QuasarCode_Library_Maths.csproj  StandardValue.cs  Units.cs
QuasarCode_Library_Maths/Fields/: FieldBase.cs  IField.cs  IVectorField.cs
QuasarCode_Library_Maths/Matrices/: IMatrix.cs  IdentityMatrix.cs  Matrix.cs  NMatrix.cs  OMatrix.cs  VMatrix.cs
QuasarCode_Library_Maths/Units/: CompoundUnit.cs  FundamentalUnitPowerPair.cs  ICompoundUnit.cs  INamedCompoundUnit.cs  IQuantity.cs  ISingleUnit.cs  IStandardFormValue.cs  ISymbolUnit.cs  ISystem.cs  IUnit.cs  IValue.cs  NamedCompoundUnit.cs  Quantities.cs  SingleUnitBase.cs  StandardFormValue.cs  SystemConversion.cs  Systems.cs  UnitBase.cs  UnitPowerPair.cs  Value.cs
QuasarCode_Library_Maths/old/: CompoundUnit.cs  ICompoundUnit.cs  IGeneralUnit.cs  IStandardValue.cs  IUnit.cs  IValue.cs  StandardValue.cs  Unit.cs  UnitPowerPair.cs  Units.cs  Value.cs
QuasarCode_Library_Symbolic/: Equasion.cs  QuasarCode_Library_Symbolic.csproj  Symbol.cs  Variable.cs
QuasarCode_Library_Tools/: QuasarCode_Library_Tools.csproj
QuasarCode_Library_Tools/Tools/: MultiItterator.cs  StringLiterals.cs  Validators.cs
QuasarCode_Python/: LICENSE.txt  QuasarCode_Python.pyproj  build.py  environment.yml  pypi_upload.bat  pyproject.toml  requirements.txt  setup.py  testing.py  vs_build.py
QuasarCode_Python/QuasarCode/: __init__.py  _global_settings.py
UnitTests_Python/: Games.py  PythonTests.py  UnitTests_Python.pyproj  edp.py  games.py  q_io.py  science.py  test_edp.py  test_games.py  test_io.py  test_maths.py  test_science.py  test_tools.py  testconfig.json  testconfig.yaml  tools.py
UnitTests_Windows/: UnitTest1.cs  UnitTests_Windows.csproj
UnitTests_Windows_CSharp/: MathsTests.cs  SymbolicTests.cs  UnitTest1.cs  UnitTests_Windows_CSharp.csproj
UnitTests_Windows_OLD_FRAMEWORK_FILES/: UnitTest1.cs  UnitTests_Windows.csproj
old-code/: README.md  pyproject.toml
old-code/src/QuasarCode/Games/Cards/: _PlayingCard.py
old-code/src/QuasarCode/Games/Dice/: _DiceCup.py
old-code/src/QuasarCode/Games/Spinners/: _ISpinner.py
old-code/src/QuasarCode/IO/Checkpointing/: _CheckpointBase.py  __init__.py
old-code/src/QuasarCode/IO/Configurations/: _json.py
old-code/src/QuasarCode/IO/Text/: _console.py
old-code/src/QuasarCode/MPI/: __init__.py  _mpi_configs.py
old-code/src/QuasarCode/Science/: __init__.py
old-code/src/QuasarCode/Tools/: StringLiterals.py  _directorys_and_imports.py
old__UnitTests_Python/: UnitTests_Python.pyproj  test_QuasarCode.py  test_science.py  test_tools.py  testconfig.properties  testconfig_2.yaml
tests/: test_CachedPlot.py  test_array_visuliser.py
(+288 files in other folders)
